force-app/main/default/objects/BLN_MobileAppointmentSlotMapping__mdt/BLN_MobileAppointmentSlotMapping__mdt.object-meta.xml
<CustomObject>
    <label>Mobile Appointment Slot Mapping</label>
    <pluralLabel>Mobile Appointment Slot Mappings</pluralLabel>
</CustomObject>