force-app/main/default/objects/BLN_MobileAppointmentSlotMapping__mdt/fields/BLN_EndTime__c.field-meta.xml
<CustomField>
    <fullName>BLN_EndTime__c</fullName>
    <label>End Time</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>