force-app/main/default/objects/BLN_MobileAppointmentSlotMapping__mdt/fields/BLN_Sequence__c.field-meta.xml
<CustomField>
    <fullName>BLN_Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>