force-app/main/default/objects/BLN_MobileAppointmentSlotMapping__mdt/fields/BLN_StartTime__c.field-meta.xml
<CustomField>
    <fullName>BLN_StartTime__c</fullName>
    <label>Start Time</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>